--- a/moodtracker.html
+++ b/moodtracker.html
@@ -5,34 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mood Tracker</title>
     <link rel="stylesheet" href="moodtracker.css">
+    
 </head>
 <body>
-    <header>
-        <nav class="navigation">
-            <a href="homepage.html">Home</a>
-            <a href="aboutus.html">About Us</a>
-            <a href="resources.html">Resources</a>
-            <a href="contactus.html">Contact Us</a>
-            <a href="moodtracker.html">Mood Tracker</a>
+    <!-- Header -->
+    <header class="header">
+        <nav class="nav">
+            <ul class="navbar">
+                <li><a href="homepage.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="resources.html" class="active">Resources</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="moodtracker.html">Mood Tracker</a></li>
+                <li><a href="signupform.html">Signup</a></li>
+            </ul>
         </nav>
     </header>
-
-    <section id="mood-form">
-        <h2>Track Your Mood</h2>
-        <form id="moodForm">
-            <label for="moodSelect">How do you feel?</label>
-            <select id="moodSelect" name="mood">
-                <option value="Happy">Happy</option>
-                <option value="Sad">Sad</option>
-                <option value="Angry">Angry</option>
-                <option value="Calm">Calm</option>
-            </select>
-            <button type="submit">Track Mood</button>
+    <!-- Mood Tracker Section -->
+    <section id="mood-tracker" class="section">
+        <h2>Mood Tracker</h2>
+        <form id="mood-form">
+            <label for="mood">How are you feeling today?</label><br><br>
+            <input type="text" id="mood" placeholder="Enter your mood" required><br><br>
+            <button type="submit">Save Mood</button><br>
         </form>
 
-        <div id="moodHistory"></div>
+        <!-- Mood Log -->
+        <div id="mood-log">
+            <h3>Your Mood Log</h3><br>
+            <ul id="mood-list"></ul>
+        </div>
     </section>
 
+    <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-section about">
@@ -43,8 +48,7 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="aboutus.html" target="_self">About Us</a></li>
-                    <li><a href="chat.html">Chat</a></li>
+                    <li><a href="aboutus.html">About Us</a></li>
                     <li><a href="resources.html">Resources</a></li>
                     <li><a href="contactus.html">Contact Us</a></li>
                 </ul>
@@ -53,46 +57,12 @@
                 <h3>Contact Us</h3>
                 <p>Email: support@mentalhealth.com</p>
                 <p>Phone: +1 123-456-7890</p>
-                <div class="social-icons">
-                    <a href="https://facebook.com/"><img src="facebook-icon.png" alt="Facebook"></a>
-                    <a href="https://twitter.com/"><img src="twitter-icon.png" alt="Twitter"></a>
-                    <a href="https://instagram.com/"><img src="instagram-icon.jfif" alt="Instagram"></a>
-                </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2024 Your Mental Health. All rights reserved.</p>
         </div>
     </footer>
-    <script src="signup.js"></script>
-<!-- Chatbot Section -->
-<section id="chatbot" class="section">
-    <!-- Chat Button to open the chat -->
-    <button id="chatButton">
-        <img src="chatbot.webp" alt="Chat Icon" id="chatIcon">
-    </button>
-
-    <!-- Chatbox that contains the Dialogflow iframe -->
-    <div id="chatbox" class="hidden">
-        <!-- Dialogflow Chatbot iframe -->
-        <iframe
-            width="350"
-            height="430"
-            allow="microphone;"
-            id="dialogflow-iframe"
-            src="https://console.dialogflow.com/api-client/demo/embedded/e9440690-3629-44a1-aa3e-4678d607cdf9"
-            style="border:none;"></iframe>
-        
-        <!-- Close Button -->
-        <button id="close-chat">Close</button>
-    </div>
-</section>
-
-<!-- Chat Button (Visible Always) -->
-<!--<button id="chatButton">
-<img src="chatbot.webp" alt="Chat Button" />
-</button>-->
-<script src="chatbot.js"></script>
 
     <script src="moodtracker.js"></script>
 </body>
