--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
         <a href="homepage.html">Home</a>
         <a href="aboutus.html">About Us</a>
         <a href="resources.html">Resources</a>
-        <a href="contactus.html">Contact Us</a>
+        <a href="contactus.html">Feedback</a>
         <a href="moodtracker.html">Mood Tracker</a>
         <a href="signupform.html">Signup</a>
     </nav>
