--- a/moodtracker.html
+++ b/moodtracker.html
@@ -15,7 +15,7 @@
                 <li><a href="homepage.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="resources.html" class="active">Resources</a></li>
-                <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="contactus.html">Feedback</a></li>
                 <li><a href="moodtracker.html">Mood Tracker</a></li>
                 <li><a href="signupform.html">Signup</a></li>
             </ul>
